@@ -9,7 +9,7 @@
   <configure name="NAME" value="ImageMagick"/>
   <configure name="LIB_VERSION" value="0x668"/>
   <configure name="LIB_VERSION_NUMBER" value="6,6,8,6"/>
-  <configure name="RELEASE_DATE" value="2011-03-19"/>
+  <configure name="RELEASE_DATE" value="2011-03-20"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
